# PointNet2

./: .gitignore  pyproject.toml  setup.py  train_classification.py  train_partseg.py  train_semseg.py
models/: pointnet2_cls_msg.py  pointnet2_cls_ssg.py  pointnet2_part_seg_ssg.py  pointnet2_sem_seg.py  pointnet2_sem_seg_msg.py  pointnet2_utils.py
models/export/: onnx_export.py
pointnet2/export/: onnx_export.py
pointnet2/models/: cls_msg.py  cls_ssg.py  part_seg_msg.py  utils.py
